Fixed navbar spacing, added some color

--- a/splitthebill/app/assets/stylesheets/application.scss
+++ b/splitthebill/app/assets/stylesheets/application.scss
@@ -15,3 +15,23 @@
 
  */
  @import "bootstrap";
+
+ .welcome{
+    padding: 10px;
+    background-color: #00a50c;
+    margin-bottom: 0;
+ }
+
+ .nv{
+    padding-right: 15px;
+    padding-left:  15px;
+    background-color: #00a50c;
+    margin-top: 0;
+ }
+
+ .line {
+    border: 0;
+    margin: 0;
+    height: 2px;
+    background-color: #005806;
+ }
